--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
   <head>
     <base href="/">
     <title>Angular 2 QuickStart</title>
+<!-- the viewport meta tag improves the presentation of your web content on iOS -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
