--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <script src="node_modules/angular2/bundles/http.dev.js"></script>
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <link rel="stylesheet" href="styles.css">
-
+    <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
     <!-- 2. Configure SystemJS -->
     <script>
       System.config({
