--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    <my-app>
+      <div class="loader">Loading...</div>
+    </my-app>
   </body>
 </html>
