buttons are stacked

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <base href="/">
-    <title>Angular 2 QuickStart</title>
+    <title>Back Pocket Games</title>
 <!-- the viewport meta tag improves the presentation of your web content on iOS -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
